# componentize-test

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml  source.js
src/: bindings.rs  lib.rs
wit/: world.wit
wit/foo/: bar.wit  world.wit
